--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "zod": "^3.22.2",
+    "zod-validation-error": "^1.5.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
