--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@prisma/client": "^5.2.0",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
+    "bcryptjs": "^2.4.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "zod": "^3.22.2",
@@ -31,6 +32,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@rocketseat/eslint-config": "^2.1.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
     "eslint": "^8.48.0",
