create auth module

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,15 @@
 
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/nestjs-fundamentals?schema=public"
 PORT=3333
+
+# To generate a private key use the below command (MacOS users):
+# genpkey -algorithm RSA -out private_key.pem -pkeyopt rsa_keygen_bits:2048
+# after you will need convert to base64 to use as a text variable with the below commad
+# base64 -i private_key.pem -o private_key_base64.txt
+JWT_PRIVATE_KEY= # Base64
+
+# To generate a public key use the below command (MacOS users):
+# openssl rsa -pubout -in private_key.pem -out public_key.pem
+# after you will need convert to base64 to use as a text variable with the below commad
+# base64 -i public_key.pem -o public_key_base64.txt
+JWT_PUBLIC_KEY= # Base64
