--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@ lerna-debug.log*
 
 # OS
 .DS_Store
-.env
 
 # Tests
 /coverage
@@ -35,3 +34,8 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# Security
+.env
+*.pem
+*_key_*
