--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "supertest": "^6.3.3",
     "zod": "^3.22.2",
     "zod-validation-error": "^1.5.0"
   },
@@ -46,6 +47,7 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^3.0.9",
+    "@types/supertest": "^2.0.12",
     "@vitest/coverage-v8": "^0.34.3",
     "dotenv": "^16.3.1",
     "eslint": "^8.48.0",
